remont/static/remont/css/top_page.css
.topPage {
  display: table;
  width: 100%;
  height: 100px;
  table-layout: fixed;
  border-spacing: 10px;
}

.topPage .sectionLogo {
  height: 90px;
  width: 15%;
  margin-top: 4px;
  margin-left: 1%;
  display: table-cell;
}

.topPage .sectionBanner {
  display: table-cell;
  border: solid 1px #999;
  height: 90px;
  width: 34%;
  float: left;
  margin-top: 4px;
  margin-left: 17%;
}

.topPage .sectionRegister {
  display: table-cell;
  height: 90px;
  width: 15%;
  float: right;
  margin-right: 1%;
  margin-top: 4px;
  border-radius: 2px;
}

.topPage .img_auto_100p {
  width: 100%;
  height: 100%
}

